<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Compras</string>
    <string name="producto">Producto</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Catntidad:</string>
    <string name="comprar">Comprar</string>
    <string name="estanteria">Estanteria</string>
    <string name="almacenado">Almacenado</string>
    <string name="borrar">Borrar</string>
    <string name="guardar">Guardar</string>
    <string name="cambiar">Cambiar idioma</string>
    <string name="agregar">Agregar</string>
    <string name="lista">Lista</string>
    <string name="editar">Editar</string>
    <string name="marca">Marca</string>
    <string name="tipo">Tipo</string>
    <string name="eleccion">Almacenado/Comprar</string>
    <string name="presentacion">Hola, buenas,
        gracias por ocupar la aplicación y recuerda
        las características que se dan al fondo.</string>
    <string name="verde">-> Marca que tiene que comprarse</string>
    <string name="rojo">-> Marca que esta en el estante</string>
    <string name="arriba">Arriba</string>
    <string name="abajo">Abajo</string>
    <string name="buscar">Buscar</string>
    <string name="b">Datos guardados exitosamente</string>
    <string name="CP">Cantidad de producto:</string>
    <string name="AL">Productos Almacenados:</string>
    <string name="COM">Productos a Comprar:</string>
</resources>