<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    tools:context=".Inicio">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="262dp"
            android:layout_height="43dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="445dp"
            android:gravity="center"
            android:text="@string/verde"
            android:textSize="17dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/Bienvenida"
            android:layout_width="332dp"
            android:layout_height="167dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:text="@string/presentacion"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="400dp"
            app:srcCompat="@drawable/baseline_square_24" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="450dp"
            app:srcCompat="@drawable/baseline_square_25" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="262dp"
            android:layout_height="42dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="390dp"
            android:gravity="center"
            android:text="@string/rojo"
            android:textSize="17dp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>